# qxikeywatcher

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md
src/: main.cpp  qxikeywatcher.cpp  qxikeywatcher.h
